<resources>
    <string name="app_name">Garvis Pool Repair</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to the homepage -->
    <string name="title_activity_home_page">HomePage</string>

    <!-- Strings related to work orders -->
    <string name="work_order_date_title">Date:  </string>
    <string name="work_order_number_title">Order # :  </string>
    <string name="work_order_job_type_title">Job:  </string>
    <string name="work_order_address_title">Address:  </string>
    <string name="work_order_description_title">Notes:  </string>
    <string name="work_order_existing_client">Existing Client  </string>
    <string name="work_order_new_client">New Client  </string>
    <string name="work_order_client_title">Client Information:  </string>
    <string name="create_work_order">Create Work Order  </string>


    <!-- Strings related to clients -->
    <string name="client_name_title">Name:  </string>
    <string name="client_phone_title">Phone Number:  </string>
    <string name="client_address_title">Address:  </string>
    <string name="client_email_title">Email:  </string>

    <!-- String for the client fragment-->
    <string name="client_first_name">First Name: </string>
    <string name="client_last_name">Last Name: </string>
    <string name="client_address">Address: </string>
    <string name="client_email">Email: </string>

    <!--Strings for creating a new client-->
    <string name="edit_first_name">Enter First Name</string>
    <string name="edit_last_name">Enter Last Name</string>
    <string name="edit_address">Enter Address</string>
    <string name="edit_email">Enter Email</string>


    <!-- String for the search menu-->
    <string name="search_title">Search </string>

    <!--Google Maps-->
    <string name="title_activity_maps">Map</string>



</resources>
