<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/clientFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_first_name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/clientLastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_last_name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/clientAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_address"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/clientEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_email"
            android:textSize="20sp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>