<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.objectivecoders.android.garvispoolrepair.WorkOrderActivity">

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_number_title"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/work_order_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="123553"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_date_title"/>
        <TextView
            android:id="@+id/work_order_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="02-21-2042"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_weight="1"
        android:id="@+id/client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/client_imageview"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_people"
                />
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client_name_title"
                        />
                    <TextView
                        android:id="@+id/client_name_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="bobby"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client_phone_title"
                        />
                    <TextView
                        android:id="@+id/client_phone_number_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="234-543-5533"
                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_job_type_title"/>
        <TextView
            android:id="@+id/work_order_job_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_address_title"/>
        <TextView
            android:id="@+id/work_order_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_description_title"/>
        <TextView
            android:id="@+id/work_order_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
