<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <TextView
        android:id="@+id/client_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:text="Client Information"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_title"
        android:layout_marginLeft="10dp"
        android:text="@string/client_name_title"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/client_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/client_first_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/client_last_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/client_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_full_name"
        android:layout_marginLeft="10dp"
        android:text="@string/client_address"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/client_address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_address_title"
        android:layout_marginLeft="20dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/client_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_address_textview"
        android:layout_marginLeft="10dp"
        android:text="@string/client_email_title"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/client_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_phone_title"
        android:layout_marginLeft="20dp"
        android:textSize="20dp" />

</RelativeLayout>
