<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp">
         <ImageView
             android:id="@+id/work_order_icon"
             android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="80dp"
             android:layout_marginRight="2sp"/>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/work_order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/work_order_number_title"
                    android:layout_marginRight="5sp"/>
                <TextView
                    android:id="@+id/work_order_number_textview"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/work_order_date_title"
                    android:layout_marginRight="5sp"/>
                <TextView
                    android:id="@+id/work_order_date"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/work_order_job"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_order_job_type_title"
                    android:layout_marginRight="5sp"/>
                <TextView
                    android:id="@+id/work_order_job_textview"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>


        </LinearLayout>

        <CheckBox
            android:id="@+id/completion_checkbox"
            android:text="Completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            />

    </LinearLayout>


</android.support.v7.widget.CardView>